--- a/css/menu.css
+++ b/css/menu.css
@@ -1,11 +1,12 @@
+
 .menu  {
     width: 88% ;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    padding-top: 5%;
-    padding-bottom: 2%;
+    padding-top: 4%;
+    padding-bottom: 5%;
 
 }
 
@@ -15,8 +16,9 @@
     justify-content: center;
     width: 100%;
     font-size: 24px;
-    padding-bottom: 2%;
+    padding-bottom: 3%;
     border-bottom: 1px solid var(--color-letra-blanco);
+    margin-bottom: 5%;
 }
 
 .menu__logo  {
