--- a/css/about.css
+++ b/css/about.css
@@ -1,33 +1,66 @@
-.about  {
-    
+.about {
     background-image: var(--background-image-about);
     border: none;
+    padding-bottom: 2%;
     padding-left: 3%;
     padding-right: 3%;
-    text-align: justify;
-    padding-bottom: 2%;
     padding-top: 2%;
-    
-   
+    text-align: justify;
+
 }
 
-.about__container  {
-    background-image:var(--color-letra-gradient) ;
+.about__container {
     background-clip: text;
     -webkit-background-clip: text;
+    background-image: var(--color-letra-gradient);
+    color: var(--color-letra-blanco);
     -webkit-text-fill-color: transparent;
     -moz-text-fill-color: transparent;
 }
-.about__container  {
-    color: var(--color-letra-blanco);
+
+.about__container p {
+    font-weight: 400;
+    padding-bottom: 1%;
+}
+
+.about__title {
+    font-size: 1.8rem;
+    padding-bottom: 0.4rem;
+    padding-top: 1%;
+}
+
+@media screen and (min-width: 1024px) {
+    .about {
+        padding: 0;
+        padding-bottom: 2rem;
+    }
+
+    .about__container {
+        margin-left: 10%;
+        width: 55%;
+    }
+
+    .about__title {
+        font-size: 1.5rem;
+        font-weight: 500;
+        margin-bottom: 1rem;
+    }
+    .about__paragraph {
+        margin-bottom: .7rem;
+        text-align: start;
+    }
+
 
 }
-.about__container p {
-    padding-bottom: 1%;
-    font-weight: 400;
-}
-.about__title {
-    padding-top: 1%;
-    padding-bottom: 0.4rem;
-    font-size: 1.8rem;
+
+@media screen and (min-width: 1224px) {
+    .about__title {
+        font-size: 2rem;
+        font-weight: 600;
+    }
+    .about__paragraph {
+        font-size: 1.5rem;
+    }
+
+
 }
