--- a/css/bases.css
+++ b/css/bases.css
@@ -2,9 +2,9 @@
     --background-image-menu: linear-gradient(180deg, #052043 0%, #3569a8 100%);
     --background-image-form: linear-gradient(180deg,  #3569a8 0%,#052043 100%);
     --background-image-academic: radial-gradient( circle at 50%, #052043 0%, #3569a8 100%);
-    --background-image-about: linear-gradient(180deg, #3569a8 0%, #527aab 30%, #f0faff 100% );
+    --background-image-about: linear-gradient(180deg, #3569a8 0%, #527aab 30%, #eaf6ff 100% );
     --background-footer:#052043;
-    --color-letra-gradient: linear-gradient(180deg, white 20%, black 50%);
+    --color-letra-gradient: linear-gradient(180deg, white 15%, black 50%);
     --background-general: #EAF2FD;
     --background-blanco: #fffdfd;
     --background-blanco-pastel:#F5F5F5;
@@ -21,9 +21,9 @@
 }
 
 .body  {
-    width: 100%;
-    height: 100%;
     font-family: var(--open-sans);
+    height: 100%;
+    width: 100%;
     
 }
 
@@ -31,29 +31,44 @@
     font-family: var(--open-sans);
 }
 .container {
-    padding-right: 6%;
     padding-left: 6%;
+    padding-right: 6%;
 }
 .presentacion  {
-    background-image: var(--background-image-menu);
     background-color: #3569a8;
-    color: var(--color-letra-blanco);
+    background-image: var(--background-image-menu);
     border: none;
+    color: var(--color-letra-blanco);
     margin-bottom: 0;
-    height: 100vh;
 }
 a , a:visited, a:hover, a:active {
-    text-decoration: none;
     color: var(--color-letra-blanco);
+    text-decoration: none;
   
 }
 
 .fondo-montaña {
     background: var(--background-image-skills);
     background-image: url(../assets/montaña.jpg);
-    width: 100%;
-    background-repeat:no-repeat;
     background-position-x:center;
     background-position-y:center;
+    background-repeat:no-repeat;
     background-size: 123vw;
+    width: 100%;
+}
+
+@media screen and (min-width: 1024px) {
+    :root {
+        --background-image-about: linear-gradient(180deg, #3569a8 0%, #96d9ff 50%, #c1fff4 100% );
+        --background-image-academic: linear-gradient( 180deg, #001a21 0%,#3569a8 100%);
+    }
+    .fondo-montaña {
+        background: var(--background-image-skills);
+        background-image: url(../assets/montaña4.png);
+        background-position-x:center;
+        background-position-y:center;
+        background-repeat:no-repeat;
+        background-size: 135vw;
+        width: 100%;
+    }
 }
