--- a/css/footer.css
+++ b/css/footer.css
@@ -2,6 +2,7 @@
     background: var(--background-footer);
     color: var(--color-letra-blanco);
     font-size: 1rem;
+    padding-bottom: 2%;
+    padding-top: 4%;
     text-align: center;
-    padding: 6%;
 }
