--- a/css/menu.css
+++ b/css/menu.css
@@ -48,7 +48,6 @@
     }
     
     .menu__list {
-        display: flex;
         font-size: 1.4rem;
     }
 }
@@ -64,6 +63,9 @@
         justify-content: center;
         padding-top: 2%;
         width: 100%;
+    }
+    .menu__logo {
+        width: 2vw;
     }
     .menu__contenedor {
         display: flex;
